# opengl-wasm-template

./: CMakeLists.txt  Makefile  README.md
native/: CMakeLists.txt
src/: main.cpp  triangle.cpp
